Added memory game link to home page

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 <a href="sean-portfolio/index.html" target="_blank">Sean Portfolio</a>
                 <a href="stanford-hiking/index.html" target="_blank">Stanford Hiking</a>
                 <a href="tribute-page/index.html" target="_blank">Tribute Page</a>
+                <a href="memory-game/index.html" target="_blank">Memory Game</a>
               </div>
           </div>
       </div>
