--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                   <a href="https://www.twitter.com/TechSnazzyLLC" target="_blank"><i class="icon ion-social-twitter"></i></a>
                   <a href="https://www.instagram.com/TechSnazzyLLC"  target="_blank"><i class="icon ion-social-instagram"></i></a>
                   <a href="https://www.linkedin.com/in/theseanmorrison" target="_blank"><i class="icon ion-social-linkedin"></i></a>
-                  <a href="https://github.com/TechSnazzy" target="_blank"><i class="fab fa-github text-white"></i></a>
+                  <a href="https://github.com/TechSnazzy" target="_blank"><i class="icond ion-social-github"></i></a>
                 </div>
             </div>
             <p class="copyright text-center">© 2018 <a href="https://techsnazzy.com">TechSnazzy, LLC</a> - site coded and written by <a href="http://www.twitter.com/seanmorrison" target="_blank">Sean Morrison</a></p>
