--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
               </p>
               <div class="text-center">
                 <a href="sean-portfolio/index.html" target="_blank">Sean Portfolio</a>
+                <a href="personal-portfolio/index.html" target="_blank">Personal Portfolio</a>
                 <a href="stanford-hiking/index.html" target="_blank">Stanford Hiking</a>
                 <a href="tribute-page/index.html" target="_blank">Tribute Page</a>
                 <a href="memory-game/index.html" target="_blank">Memory Game</a>
