--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <a href="stanford-hiking/index.html" target="_blank">Stanford Hiking</a>
                 <a href="tribute-page/index.html" target="_blank">Tribute Page</a>
                 <a href="memory-game/index.html" target="_blank">Memory Game</a>
+                <a href="arcade-game/index.html" target="_blank">Arcade Game</a>
               </div>
           </div>
       </div>
