Updated the feed reader link on the homepage to point to githubproject

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <a href="tribute-page/index.html" target="_blank">Tribute Page</a>
                 <a href="memory-game/index.html" target="_blank">Memory Game</a>
                 <a href="arcade-game/index.html" target="_blank">Arcade Game</a>
-                <a href="feed-reader/index.html" target="_blank">Feed Reader</a>
+                <a href="https://github.com/TechSnazzy/feed-reader" target="_blank">Feed Reader</a>
               </div>
           </div>
       </div>
