--- a/cat-clicker/index.html
+++ b/cat-clicker/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Cat Clicker</title>
   </head>
   <body>
     <div class="container">
       <h1 class="count text-center display-4">0</h1>
       <h1 class="text-center">Click the Cat</h1>
-      <img id="milo" src="img/cat.png" alt="cat">
+      <img id="milo" class="img-fluid img-thumbnail" src="img/cat.png" alt="Milo the Cat">
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
