Added a line so that an image shows when link texted

--- a/cat-clicker/index.html
+++ b/cat-clicker/index.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <meta property="og:image" content="img/cat.png" />
     <title>Cat Clicker</title>
   </head>
   <body>
