--- a/cat-clicker/index.html
+++ b/cat-clicker/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -9,10 +10,23 @@
     <title>Cat Clicker</title>
   </head>
   <body>
+
     <div class="container">
-      <h1 class="count text-center display-4">0</h1>
-      <h1 class="text-center">Click the Cat</h1>
-      <img id="milo" class="img-fluid img-thumbnail" src="img/cat.png" alt="Milo the Cat">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h1 class="count text-center display-4">0</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 text-center">
+          <h1 id="milo-heading" class="text-center"></h1>
+          <img id="milo-image" class="img-fluid img-thumbnail" src="img/milo.png" alt="Milo the Cat">
+        </div>
+        <div class="col-md-6 text-center">
+          <h1 id="macy-heading" class="text-center"></h1>
+          <img id="macy-image" class="img-fluid img-thumbnail" src="img/macy.png" alt="Macy the Cat">
+        </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
