--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
           <a href="https://github.com/TechSnazzy" target="_blank">
             <i class="fab fa-github text-white"></i>
           </a>
+          <a href="https://medium.com/@seanmorrison" target="_blank">
+            <i class="fab fa-medium text-white"></i>
+          </a>
         </div><br>
         <p class="text-center lead">
           You won't need to be tech savvy when you have TechSnazzy!
