Added Pixel Art Maker to the list of projects

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <a class="nav-link" href="memory-game/index.html" target="_blank">Memory Game</a>
                 <a class="nav-link" href="arcade-game/index.html" target="_blank">Arcade Game</a>
                 <a class="nav-link" href="https://github.com/TechSnazzy/feed-reader" target="_blank">Feed Reader</a>
+                <a class="nav-link" href="pixel-art-maker/index.html" target="_blank">Pixel Art Maker</a>
               </div>
             </li>
             <li class="nav-item" role="presentation"><a class="nav-link" href="#about-me">About</a></li>
