--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <a class="nav-link" href="arcade-game/index.html" target="_blank">Arcade Game</a>
                 <a class="nav-link" href="https://github.com/TechSnazzy/feed-reader" target="_blank">Feed Reader</a>
                 <a class="nav-link" href="pixel-art-maker/index.html" target="_blank">Pixel Art Maker</a>
+                <a class="nav-link" href="flexbox-aria-play/index.html" target="_blank">Flexbox ARIA Play</a>
               </div>
             </li>
             <li class="nav-item" role="presentation"><a class="nav-link" href="#about-me">About</a></li>
