--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="https://github.com/TechSnazzy/feed-reader" target="_blank">Feed Reader</a>
                 <a class="nav-link" href="pixel-art-maker/index.html" target="_blank">Pixel Art Maker</a>
                 <a class="nav-link" href="flexbox-aria-play/index.html" target="_blank">Flexbox ARIA Play</a>
-                <a class="nav-link" href="restaurant-review-app/index.html" target="_blank">Restaurants Review</a>
+                <a class="nav-link" href="https://github.com/TechSnazzy/restaurant-reviews-app" target="_blank">Restaurants Review</a>
               </div>
             </li>
             <li class="nav-item" role="presentation"><a class="nav-link" href="#about-me">About</a></li>
