--- a/index.html
+++ b/index.html
@@ -179,10 +179,7 @@
       </div>
     </div>
     <div class="text-center">
-      <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d203130.40383348995!2d-121.95749605721039!3d37.29720613266263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fcae48af93ff5%3A0xb99d8c0aca9f717b!2sSan+Jose%2C+CA!5e0!3m2!1sen!2sus!4v1523229541888" scrolling="no" width="75%" height="450" frameborder="0" style="border:0" allowfullscreen>
-      </iframe> -->
-      <iframe
-        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEKuc0ftmJBTtEn4RB_VmXLXAJvt4z0cQ&q=SanJose+CA" scrolling="no" width="75%" height="450" frameborder="0" style="border:0" allowfullscreen>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d203130.40383348995!2d-121.95749605721039!3d37.29720613266263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fcae48af93ff5%3A0xb99d8c0aca9f717b!2sSan+Jose%2C+CA!5e0!3m2!1sen!2sus!4v1523229541888" scrolling="no" width="75%" height="450" frameborder="0" style="border:0" allowfullscreen>
       </iframe>
     </div>
   </div>
