--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
   <link rel="stylesheet" href="assets/css/Social-Icons.css">
   <link rel="stylesheet" href="assets/css/styles.css">
-  <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+"
+    crossorigin="anonymous"></script>
   <title>TechSnazzy, LLC - Technology Consultation Services</title>
 </head>
 
@@ -40,13 +41,16 @@
   <!-- NAVIGATION -->
   <div>
     <nav class="navbar navbar-light navbar-expand-md navigation-clean">
-      <div class="container"><a class="navbar-brand" href="#" style="background-image:url(&quot;assets/img/techsnazzy-logo.png&quot;);background-position:center;background-size:100%;background-repeat:no-repeat;width:250px;height:75px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+      <div class="container"><a class="navbar-brand" href="#" style="background-image:url(&quot;assets/img/techsnazzy-logo.png&quot;);background-position:center;background-size:100%;background-repeat:no-repeat;width:250px;height:75px;"></a><button
+          class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
+            class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navcol-1">
           <ul class="nav navbar-nav ml-auto">
             <li class="nav-item" role="presentation"><a class="nav-link" href="#">Home</a></li>
             <!-- Udacity Dropdown Menu -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Udacity Projects
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">Udacity Projects
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="nav-link" href="sean-portfolio/index.html" target="_blank">Sean Portfolio</a>
@@ -58,7 +62,10 @@
                 <a class="nav-link" href="https://github.com/TechSnazzy/feed-reader" target="_blank">Feed Reader</a>
                 <a class="nav-link" href="pixel-art-maker/index.html" target="_blank">Pixel Art Maker</a>
                 <a class="nav-link" href="flexbox-aria-play/index.html" target="_blank">Flexbox ARIA Play</a>
-                <a class="nav-link" href="https://github.com/TechSnazzy/restaurant-reviews-app" target="_blank">Restaurants Review</a>
+                <a class="nav-link" href="https://github.com/TechSnazzy/restaurant-reviews-app" target="_blank">Restaurants
+                  Review</a>
+                <a class="nav-link" href="https://github.com/TechSnazzy/neighborhood-map" target="_blank">Neighborhood
+                  Map</a>
               </div>
             </li>
             <li class="nav-item" role="presentation"><a class="nav-link" href="#about-me">About</a></li>
@@ -76,7 +83,8 @@
         <h2 class="techSnazzyLLC text-center display-4">TechSnazzy, LLC</h2>
         <h2 class="text-center">Technology Consultation Services</h2>
         <p class="text-center lead">
-          Providing top-notch IT support and service for Windows, Mac and Linux and Front End Web Development using HTML, CSS and JavaScript. Check out my social sites below to learn more...
+          Providing top-notch IT support and service for Windows, Mac and Linux and Front End Web Development using
+          HTML, CSS and JavaScript. Check out my social sites below to learn more...
         </p>
         <div class="social text-center display-4">
           <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank">
@@ -113,38 +121,45 @@
     <div class="container">
       <div class="intro">
         <h2 class="text-center">Solutions</h2>
-        <p class="text-center">Whether it's Windows, Mac or Linux I can help. You can count on me for friendly and quality service. Technology should help you be more productive and get more done without breaking the bank.</p>
+        <p class="text-center">Whether it's Windows, Mac or Linux I can help. You can count on me for friendly and
+          quality service. Technology should help you be more productive and get more done without breaking the bank.</p>
       </div>
       <div class="row features">
         <div class="col-sm-6 col-lg-4 item">
           <i class="fas fa-briefcase icon"></i>
           <h3 class="name">Small/Medium Sized Business</h3>
-          <p class="description">With over 20 years of experience working with small and medium sized businesses, I understand your needs and can help you with your business technology.</p>
+          <p class="description">With over 20 years of experience working with small and medium sized businesses, I
+            understand your needs and can help you with your business technology.</p>
         </div>
         <div class="col-sm-6 col-lg-4 item">
           <i class="fas fa-users icon"></i>
           <h3 class="name">Friendly Customer Service</h3>
-          <p class="description">Helpdesk, System Administration, Network Support, Data Backups and more. I will listen to your needs and help you find solutions.</p>
+          <p class="description">Helpdesk, System Administration, Network Support, Data Backups and more. I will listen
+            to your needs and help you find solutions.</p>
         </div>
         <div class="col-sm-6 col-lg-4 item">
           <i class="fas fa-laptop icon"></i>
           <h3 class="name">Helpdesk Support</h3>
-          <p class="description">Having a full-time Helpdesk on staff doesn't make financial sense for you. Most of your needs are met but you just need a tech person available to help out once in awhile.</p>
+          <p class="description">Having a full-time Helpdesk on staff doesn't make financial sense for you. Most of
+            your needs are met but you just need a tech person available to help out once in awhile.</p>
         </div>
         <div class="col-sm-6 col-lg-4 item">
           <i class="fas fa-cloud icon"></i>
           <h3 class="name">Web Site Development</h3>
-          <p class="description">Maybe you need a simple website. Something that establishes your business presence and communicates your products and services to your customers and won't cost a fortune to maintain.</p>
+          <p class="description">Maybe you need a simple website. Something that establishes your business presence and
+            communicates your products and services to your customers and won't cost a fortune to maintain.</p>
         </div>
         <div class="col-sm-6 col-lg-4 item">
           <i class="fas fa-server icon"></i>
           <h3 class="name">Data Backups</h3>
-          <p class="description">Do you backup your data? If not, you should. There are many ways to backup your data. Let's discuss the option that works best for you.</p>
+          <p class="description">Do you backup your data? If not, you should. There are many ways to backup your data.
+            Let's discuss the option that works best for you.</p>
         </div>
         <div class="col-sm-6 col-lg-4 item">
           <i class="fas fa-dollar-sign icon"></i>
           <h3 class="name">Affordable</h3>
-          <p class="description">Technology solutions don't have to be expensive. Today there are many affordable options for you that will suit your business needs.</p>
+          <p class="description">Technology solutions don't have to be expensive. Today there are many affordable
+            options for you that will suit your business needs.</p>
         </div>
       </div>
     </div>
@@ -159,11 +174,15 @@
       <div class="intro">
         <h2 class="text-center">About Me</h2>
         <p class="lead">
-          My name is Sean Morrison. Feel free to follow me on my social sites to learn more about me. Over the last 20 years, I've been an IT Support Specialist with small to medium sized businesses in the Bay Area. I have been a professional Helpdesk, System and Network Administrator, developed websites and worked with a variety of hardware and software.
+          My name is Sean Morrison. Feel free to follow me on my social sites to learn more about me. Over the last 20
+          years, I've been an IT Support Specialist with small to medium sized businesses in the Bay Area. I have been
+          a professional Helpdesk, System and Network Administrator, developed websites and worked with a variety of
+          hardware and software.
         </p>
       </div>
       <div class="text-center">
-        <a class="btn btn-success" role="button" href="https://www.linkedin.com/in/theseanmorrison" target="_blank">Learn more...</a>
+        <a class="btn btn-success" role="button" href="https://www.linkedin.com/in/theseanmorrison" target="_blank">Learn
+          more...</a>
       </div>
     </div>
   </div>
@@ -179,7 +198,8 @@
       </div>
     </div>
     <div class="text-center">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d203130.40383348995!2d-121.95749605721039!3d37.29720613266263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fcae48af93ff5%3A0xb99d8c0aca9f717b!2sSan+Jose%2C+CA!5e0!3m2!1sen!2sus!4v1523229541888" scrolling="no" width="75%" height="450" frameborder="0" style="border:0" allowfullscreen>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d203130.40383348995!2d-121.95749605721039!3d37.29720613266263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fcae48af93ff5%3A0xb99d8c0aca9f717b!2sSan+Jose%2C+CA!5e0!3m2!1sen!2sus!4v1523229541888"
+        scrolling="no" width="75%" height="450" frameborder="0" style="border:0" allowfullscreen>
       </iframe>
     </div>
   </div>
@@ -237,7 +257,8 @@
           <div class="col-md-6 item text">
             <h3>TechSnazzy, LLC</h3>
             <p>
-              Providing top-notch IT support and service for Windows, Mac and Linux and Front End Web Development using HTML, CSS and JavaScript. Check out my social sites below to learn more...
+              Providing top-notch IT support and service for Windows, Mac and Linux and Front End Web Development using
+              HTML, CSS and JavaScript. Check out my social sites below to learn more...
             </p><br>
             <p>
               You won't need to be tech savvy when you have TechSnazzy!
@@ -251,7 +272,8 @@
             <a href="https://github.com/TechSnazzy" target="_blank"><i class="icond ion-social-github"></i></a>
           </div>
         </div>
-        <p class="copyright text-center">© 2018 <a href="https://techsnazzy.com">TechSnazzy, LLC</a> - site coded and written by <a href="http://www.twitter.com/seanmorrison" target="_blank">Sean Morrison</a></p>
+        <p class="copyright text-center">© 2018 <a href="https://techsnazzy.com">TechSnazzy, LLC</a> - site coded and
+          written by <a href="http://www.twitter.com/seanmorrison" target="_blank">Sean Morrison</a></p>
       </div>
     </footer>
   </div>
