Updated the Neighborhood Maps project link

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a class="nav-link" href="flexbox-aria-play/index.html" target="_blank">Flexbox ARIA Play</a>
                 <a class="nav-link" href="https://github.com/TechSnazzy/restaurant-reviews-app" target="_blank">Restaurants
                   Review</a>
-                <a class="nav-link" href="https://github.com/TechSnazzy/neighborhood-map" target="_blank">Neighborhood
+                <a class="nav-link" href="https://sean-udacity-map-project.firebaseapp.com" target="_blank">Neighborhood
                   Map</a>
               </div>
             </li>
