Updated Rest Reviews to use Firebase URL instead for live project

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                   <a
                     class="nav-link"
-                    href="https://github.com/TechSnazzy/restaurant-reviews-app"
+                    href="https://sean-udacity-rr-project.firebaseapp.com"
                     target="_blank"
                     >Project 5: Restaurants Review</a
                   >
