Added Sean Personal Practice Page to Other Links section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
                   >
                   <a
                     class="nav-link"
+                    href="http://techsnazzy.com/html-personal-site/"
+                    target="_blank"
+                    >Sean Personal Practice Page</a
+                  >
+                  <a
+                    class="nav-link"
                     href="stanford-hiking/index.html"
                     target="_blank"
                     >Stanford Hiking</a
