Add Sean CSS Site link

--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@
                     target="_blank"
                     >Tribute Page</a
                   >
+                  <a
+                    class="nav-link"
+                    href="http://techsnazzy.com/css-site/"
+                    target="_blank"
+                    >Sean CSS Site</a
+                  >
                 </div>
               </li>
 
