--- a/index.html
+++ b/index.html
@@ -227,6 +227,12 @@
             <a href="https://github.com/TechSnazzy" target="_blank">
               <i class="fab fa-github text-white"></i>
             </a>
+            <a
+              href="https://stackoverflow.com/users/story/7503105"
+              target="_blank"
+            >
+              <i class="fab fa-stack-overflow"></i>
+            </a>
             <a href="https://medium.com/@seanmorrison" target="_blank">
               <i class="fab fa-medium text-white"></i>
             </a>
