Made stackoverflow icon text white

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               href="https://stackoverflow.com/users/story/7503105"
               target="_blank"
             >
-              <i class="fab fa-stack-overflow"></i>
+              <i class="fab fa-stack-overflow text-white"></i>
             </a>
             <a href="https://medium.com/@seanmorrison" target="_blank">
               <i class="fab fa-medium text-white"></i>
