Added a link for TechSnazzy 2.0

--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
                     target="_blank"
                     >Sean CSS Site</a
                   >
+                  <a
+                    class="nav-link"
+                    href="http://techsnazzy.com/techsnazzy/"
+                    target="_blank"
+                    >TechSnazzy 2.0</a
+                  >
                 </div>
               </li>
 
