--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a
             class="navbar-brand"
             href="#"
-            style="background-image:url(&quot;assets/img/techsnazzy-logo.png&quot;);background-position:center;background-size:100%;background-repeat:no-repeat;width:250px;height:75px;"
+            style='background-image:url("assets/img/techsnazzy-logo.png");background-position:center;background-size:100%;background-repeat:no-repeat;width:250px;height:75px;'
           ></a
           ><button
             class="navbar-toggler"
@@ -368,12 +368,12 @@
     <div id="map-me" class="highlight-blue">
       <div class="container">
         <div class="intro">
-          <h2 class="text-center">Located in San Jose, CA</h2>
+          <h2 class="text-center">Located in Santa Clara, CA</h2>
         </div>
       </div>
       <div class="text-center">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d203130.40383348995!2d-121.95749605721039!3d37.29720613266263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fcae48af93ff5%3A0xb99d8c0aca9f717b!2sSan+Jose%2C+CA!5e0!3m2!1sen!2sus!4v1523229541888"
+          src="https://www.google.com/maps/place/Santa+Clara,+CA/@37.3709535,-122.002572,13z/data=!3m1!4b1!4m5!3m4!1s0x808fb7815c08c193:0xe475a47ca3c0bfc0!8m2!3d37.3541079!4d-121.9552356"
           scrolling="no"
           width="75%"
           height="450"
