--- a/index.html
+++ b/index.html
@@ -373,15 +373,14 @@
       </div>
       <div class="text-center">
         <iframe
-          src="https://www.google.com/maps/place/Santa+Clara,+CA/@37.3709535,-122.002572,13z/data=!3m1!4b1!4m5!3m4!1s0x808fb7815c08c193:0xe475a47ca3c0bfc0!8m2!3d37.3541079!4d-121.9552356"
           scrolling="no"
           width="75%"
           height="450"
           frameborder="0"
           style="border:0"
+          src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk8EIXIG3j4ARwL_Ao3ykdeQ&key=AIzaSyCcy8mnVTHRmKX8ubNE38RuSV5et15HNiQ"
           allowfullscreen
-        >
-        </iframe>
+        ></iframe>
       </div>
     </div>
 
