--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
           allowfullscreen
         ></iframe> -->
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d203130.40383348995!2d-121.95749605721039!3d37.29720613266263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fcae48af93ff5%3A0xb99d8c0aca9f717b!2sSanta+Clara%2C+CA!5e0!3m2!1sen!2sus!4v1523229541888"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d203130.40383348995!2d-122.002572!3d37.3709535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fcae48af93ff5%3A0xb99d8c0aca9f717b!2sSanta+Clara%2C+CA!5e0!3m2!1sen!2sus!4v1523229541888"
           scrolling="no"
           width="75%"
           height="450"
