--- a/index.html
+++ b/index.html
@@ -388,8 +388,7 @@
           height="450"
           frameborder="0"
           style="border:0"
-          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCcy8mnVTHRmKX8ubNE38RuSV5et15HNiQ
-    &q=Santa+Clara+WA"
+          src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk8EIXIG3j4ARwL_Ao3ykdeQ&key=AIzaSyCcy8mnVTHRmKX8ubNE38RuSV5et15HNiQ"
           allowfullscreen
         >
         </iframe>
