Added Google Analytics info

--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
       integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+"
       crossorigin="anonymous"
     ></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-165323572-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-165323572-1');
+    </script>
+
     <title>TechSnazzy, LLC - Technology Consultation Services</title>
   </head>
 
@@ -50,7 +65,14 @@
           <a
             class="navbar-brand"
             href="#"
-            style='background-image:url("assets/img/techsnazzy-logo.png");background-position:center;background-size:100%;background-repeat:no-repeat;width:250px;height:75px;'
+            style="
+              background-image: url('assets/img/techsnazzy-logo.png');
+              background-position: center;
+              background-size: 100%;
+              background-repeat: no-repeat;
+              width: 250px;
+              height: 75px;
+            "
           ></a
           ><button
             class="navbar-toggler"
@@ -254,7 +276,12 @@
     <!-- PARALLAX GOLDEN GATE -->
     <div
       data-bs-parallax-bg="true"
-      style="height:500px;background-image:url(assets/img/para/golden-gate.jpg);background-position:center;background-size:cover;"
+      style="
+        height: 500px;
+        background-image: url(assets/img/para/golden-gate.jpg);
+        background-position: center;
+        background-size: cover;
+      "
     ></div>
 
     <!-- SERVICES -->
@@ -329,7 +356,12 @@
     <!-- PARALLAX COMPUTER FRONT -->
     <div
       data-bs-parallax-bg="true"
-      style="height:500px;background-image:url(assets/img/para/computer-front.jpg);background-position:center;background-size:cover;"
+      style="
+        height: 500px;
+        background-image: url(assets/img/para/computer-front.jpg);
+        background-position: center;
+        background-size: cover;
+      "
     ></div>
 
     <!-- ABOUT -->
@@ -361,7 +393,12 @@
     <!-- PARALLAX COMPUTER CODE -->
     <div
       data-bs-parallax-bg="true"
-      style="height:500px;background-image:url(assets/img/para/computer-code.jpg);background-position:center;background-size:cover;"
+      style="
+        height: 500px;
+        background-image: url(assets/img/para/computer-code.jpg);
+        background-position: center;
+        background-size: cover;
+      "
     ></div>
 
     <!-- LOCATION -->
@@ -378,7 +415,7 @@
           width="75%"
           height="450"
           frameborder="0"
-          style="border:0"
+          style="border: 0;"
           allowfullscreen
         >
         </iframe>
@@ -388,7 +425,12 @@
     <!-- PARALLAX CLOUD BACKUP -->
     <div
       data-bs-parallax-bg="true"
-      style="height:500px;background-image:url(assets/img/para/cloud-backup.jpg);background-position:center;background-size:cover;"
+      style="
+        height: 500px;
+        background-image: url(assets/img/para/cloud-backup.jpg);
+        background-position: center;
+        background-size: cover;
+      "
     ></div>
 
     <!-- CONTACT -->
@@ -430,7 +472,12 @@
     <!-- PARALLAX SURFACE LAPTOP -->
     <div
       data-bs-parallax-bg="true"
-      style="height:500px;background-image:url(assets/img/para/surface-laptop.jpg);background-position:center;background-size:cover;"
+      style="
+        height: 500px;
+        background-image: url(assets/img/para/surface-laptop.jpg);
+        background-position: center;
+        background-size: cover;
+      "
     ></div>
 
     <!-- FOOTER -->
