Removed Stack Overflow link and added Youtube

--- a/index.html
+++ b/index.html
@@ -243,6 +243,9 @@
             <a href="https://www.twitter.com/TechSnazzyLLC" target="_blank">
               <i class="fab fa-twitter-square text-white"></i>
             </a>
+            <a href="https://youtu.be/kB1XY7XJNEU" target="_blank">
+              <i class="fab fa-youtube-square text-white"></i>
+            </a>
             <a href="https://www.instagram.com/TechSnazzyLLC" target="_blank">
               <i class="fab fa-instagram text-white"></i>
             </a>
@@ -254,12 +257,6 @@
             </a>
             <a href="https://github.com/TechSnazzy" target="_blank">
               <i class="fab fa-github text-white"></i>
-            </a>
-            <a
-              href="https://stackoverflow.com/users/story/7503105"
-              target="_blank"
-            >
-              <i class="fab fa-stack-overflow text-white"></i>
             </a>
             <a href="https://medium.com/@seanmorrison" target="_blank">
               <i class="fab fa-medium text-white"></i>
