Removed Stack Overflow link and added Youtube on bottom

--- a/index.html
+++ b/index.html
@@ -515,6 +515,9 @@
               <a href="https://www.twitter.com/TechSnazzyLLC" target="_blank"
                 ><i class="icon ion-social-twitter"></i
               ></a>
+              <a href="https://youtu.be/kB1XY7XJNEU" target="_blank">
+                <i class="fab fa-youtube-square text-white"></i>
+              </a>
               <a href="https://www.instagram.com/TechSnazzyLLC" target="_blank"
                 ><i class="icon ion-social-instagram"></i
               ></a>
