Changed Udacity Projects to just Projects

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
-                  >Udacity Projects
+                  >Projects
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a
