Updated copyright year

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
+    <!-- <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" /> -->
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
     <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css" />
     <link rel="stylesheet" href="assets/css/Features-Clean.css" />
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css" />
     <link rel="stylesheet" href="assets/css/Social-Icons.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <script src="https://kit.fontawesome.com/dd5b3e50d1.js" crossorigin="anonymous"></script>
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"
@@ -31,10 +32,6 @@
       crossorigin="anonymous"
     ></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-165323572-1"
-    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -245,7 +242,7 @@
             <a href="https://www.twitter.com/TechSnazzyLLC" target="_blank">
               <i class="fab fa-twitter-square text-white"></i>
             </a>
-            <a href="https://youtu.be/kB1XY7XJNEU" target="_blank">
+            <a href="https://www.youtube.com/@TechSnazzyMedia" target="_blank">
               <i class="fab fa-youtube-square text-white"></i>
             </a>
             <a href="https://www.instagram.com/TechSnazzyLLC" target="_blank">
@@ -262,6 +259,9 @@
             </a>
             <a href="https://medium.com/@seanmorrison" target="_blank">
               <i class="fab fa-medium text-white"></i>
+            </a>
+            <a href="https://twit.social/@seanmorrison" target="_blank">
+              <i class="fa-solid fa-mustache text-white"></i>
             </a>
           </div>
           <br />
@@ -519,8 +519,8 @@
               <a href="https://www.twitter.com/TechSnazzyLLC" target="_blank"
                 ><i class="icon ion-social-twitter"></i
               ></a>
-              <a href="https://youtu.be/kB1XY7XJNEU" target="_blank">
-                <i class="fab fa-youtube-square text-white"></i>
+              <a href="https://www.youtube.com/@TechSnazzyMedia" target="_blank">
+                <i class="fab fa-youtube-square"></i>
               </a>
               <a href="https://www.instagram.com/TechSnazzyLLC" target="_blank"
                 ><i class="icon ion-social-instagram"></i
@@ -536,8 +536,8 @@
             </div>
           </div>
           <p class="copyright text-center">
-            © 2022 <a href="https://techsnazzy.com">TechSnazzy, LLC</a> - site
-            coded and written by
+            © 2023 <a href="https://techsnazzy.com">TechSnazzy, LLC</a> - site
+            development including code and content by
             <a href="http://www.twitter.com/seanmorrison" target="_blank"
               >Sean Morrison</a
             >
