Uncommented fontawesome css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <!-- <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" /> -->
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
     <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css" />
     <link rel="stylesheet" href="assets/css/Features-Clean.css" />
