--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
               <li class="nav-item" role="presentation">
                 <a class="nav-link" href="#contact-me">Contact</a>
               </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" rel="me" href="https://twit.social/@seanmorrison" target="_blank">Mastodon</a>
+              </li>
             </ul>
           </div>
         </div>
