Rearrange stylesheet links on index page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta property="og:image" content="assets/img/techsnazzy-logo.png" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
+
+    <!-- Local stylesheets -->
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
     <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css" />
     <link rel="stylesheet" href="assets/css/Features-Clean.css" />
@@ -15,15 +15,16 @@
     <link rel="stylesheet" href="assets/css/Footer-Clean.css" />
     <link rel="stylesheet" href="assets/css/Footer-Dark.css" />
     <link rel="stylesheet" href="assets/css/Highlight-Blue.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css"
-    />
     <link rel="stylesheet" href="assets/css/Lightbox-Gallery.css" />
     <link rel="stylesheet" href="assets/css/Map-Clean.css" />
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css" />
     <link rel="stylesheet" href="assets/css/Social-Icons.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
+    
+    <!-- External stylesheets -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css" />
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <script src="https://kit.fontawesome.com/dd5b3e50d1.js" crossorigin="anonymous"></script>
     <script
       defer
