Comment out stylesheet links and add minified stylesheet link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
     <!-- Local stylesheets -->
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
+    <!-- <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
     <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css" />
     <link rel="stylesheet" href="assets/css/Features-Clean.css" />
     <link rel="stylesheet" href="assets/css/Footer-Basic.css" />
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="assets/css/Map-Clean.css" />
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css" />
     <link rel="stylesheet" href="assets/css/Social-Icons.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" /> -->
+    <link rel="stylesheet" href="assets/css/styles.min.css">
     
     <!-- External stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css" />
