Hide project dropdown and Mastodon link

--- a/index.html
+++ b/index.html
@@ -6,23 +6,7 @@
     <meta property="og:image" content="assets/img/techsnazzy-logo.png" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-
-    <!-- Local stylesheets -->
-    <!-- <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
-    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css" />
-    <link rel="stylesheet" href="assets/css/Features-Clean.css" />
-    <link rel="stylesheet" href="assets/css/Footer-Basic.css" />
-    <link rel="stylesheet" href="assets/css/Footer-Clean.css" />
-    <link rel="stylesheet" href="assets/css/Footer-Dark.css" />
-    <link rel="stylesheet" href="assets/css/Highlight-Blue.css" />
-    <link rel="stylesheet" href="assets/css/Lightbox-Gallery.css" />
-    <link rel="stylesheet" href="assets/css/Map-Clean.css" />
-    <link rel="stylesheet" href="assets/css/Navigation-Clean.css" />
-    <link rel="stylesheet" href="assets/css/Social-Icons.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" /> -->
     <link rel="stylesheet" href="assets/css/styles.min.css">
-    
-    <!-- External stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css" />
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
@@ -154,7 +138,7 @@
               -->
 
               <!-- Udacity Projects Dropdown Menu -->
-              <li class="nav-item dropdown">
+              <!-- <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
@@ -213,16 +197,16 @@
                     >Project 7: Neighborhood Map</a
                   >
                 </div>
-              </li>
+              </li> -->
               <li class="nav-item" role="presentation">
                 <a class="nav-link" href="#about-me">About</a>
               </li>
               <li class="nav-item" role="presentation">
                 <a class="nav-link" href="#contact-me">Contact</a>
               </li>
-              <li class="nav-item" role="presentation">
+              <!-- <li class="nav-item" role="presentation">
                 <a class="nav-link" rel="me" href="https://twit.social/@seanmorrison" target="_blank">Mastodon</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
