Fix social icons in footer

--- a/index.html
+++ b/index.html
@@ -501,27 +501,25 @@
               <br />
               <p>You won't need to be tech savvy when you have TechSnazzy!</p>
             </div>
-            <div class="col item social">
-              <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank"
-                ><i class="icon ion-social-facebook"></i
-              ></a>
-              <a href="https://www.twitter.com/TechSnazzyLLC" target="_blank"
-                ><i class="icon ion-social-twitter"></i
-              ></a>
+            <div class="col item social text-center">
+              <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank">
+                <i class="fab fa-facebook-square"></i>
+              </a>
+              <a href="https://www.twitter.com/TechSnazzyLLC" target="_blank">
+                <i class="fab fa-twitter-square"></i>
+              </a>
               <a href="https://www.youtube.com/@TechSnazzyMedia" target="_blank">
                 <i class="fab fa-youtube-square"></i>
               </a>
-              <a href="https://www.instagram.com/TechSnazzyLLC" target="_blank"
-                ><i class="icon ion-social-instagram"></i
-              ></a>
-              <a
-                href="https://www.linkedin.com/in/theseanmorrison"
-                target="_blank"
-                ><i class="icon ion-social-linkedin"></i
-              ></a>
-              <a href="https://github.com/TechSnazzy" target="_blank"
-                ><i class="icond ion-social-github"></i
-              ></a>
+              <a href="https://www.instagram.com/TechSnazzyLLC" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/theseanmorrison" target="_blank">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a href="https://github.com/TechSnazzy" target="_blank">
+                <i class="fab fa-github-square"></i>
+              </a>
             </div>
           </div>
           <p class="copyright text-center">
