--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css" />
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <script src="https://kit.fontawesome.com/dd5b3e50d1.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/dd5b3e50d1.js" crossorigin="anonymous"></script> -->
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"
@@ -82,9 +82,6 @@
               <li class="nav-item" role="presentation">
                 <a class="nav-link" href="#contact-me">Contact</a>
               </li>
-              <!-- <li class="nav-item" role="presentation">
-                <a class="nav-link" rel="me" href="https://twit.social/@seanmorrison" target="_blank">Mastodon</a>
-              </li> -->
             </ul>
           </div>
         </div>
