Update Gtag info

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta property="og:image" content="assets/img/techsnazzy-logo.png" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-    <link rel="stylesheet" href="assets/css/styles.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css" />
+    <link rel="stylesheet" href="assets/css/styles.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css"
+    />
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <!-- <script src="https://kit.fontawesome.com/dd5b3e50d1.js" crossorigin="anonymous"></script> -->
@@ -283,7 +286,11 @@
           allowfullscreen
         >
         </iframe> -->
-        <img src="assets/img/bayarea.png" alt="Bay Area California" width="80%">
+        <img
+          src="assets/img/bayarea.png"
+          alt="Bay Area California"
+          width="80%"
+        />
       </div>
     </div>
 
@@ -383,13 +390,19 @@
               <a href="https://www.twitter.com/TechSnazzyLLC" target="_blank">
                 <i class="fab fa-twitter-square"></i>
               </a>
-              <a href="https://www.youtube.com/@TechSnazzyMedia" target="_blank">
+              <a
+                href="https://www.youtube.com/@TechSnazzyMedia"
+                target="_blank"
+              >
                 <i class="fab fa-youtube-square"></i>
               </a>
               <a href="https://www.instagram.com/TechSnazzyLLC" target="_blank">
                 <i class="fab fa-instagram"></i>
               </a>
-              <a href="https://www.linkedin.com/in/theseanmorrison" target="_blank">
+              <a
+                href="https://www.linkedin.com/in/theseanmorrison"
+                target="_blank"
+              >
                 <i class="fab fa-linkedin"></i>
               </a>
               <a href="https://github.com/TechSnazzy" target="_blank">
@@ -415,20 +428,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-117515000-1"
+      src="https://www.googletagmanager.com/gtag/js?id=G-Y0XB6HY9VX"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-
       function gtag() {
         dataLayer.push(arguments);
       }
       gtag('js', new Date());
 
-      gtag('config', 'UA-117515000-1');
+      gtag('config', 'G-Y0XB6HY9VX');
     </script>
   </body>
 </html>
