--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
               <li class="nav-item" role="presentation">
                 <a class="nav-link" href="#contact-me">Contact</a>
               </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" href="https://techsnazzy.com/sean-blog/" target="_blank">Blog</a>
+              </li>
             </ul>
           </div>
         </div>
