--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <a class="nav-link" href="#contact-me">Contact</a>
               </li>
               <li class="nav-item" role="presentation">
-                <a class="nav-link" href="https://techsnazzy.com/sean-blog/" target="_blank">Blog</a>
+                <a class="nav-link" href="https://techsnazzy.com/sean-blog/">Blog</a>
               </li>
             </ul>
           </div>
