--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       crossorigin="anonymous"
     ></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-111FRRR9QK"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -28,7 +33,7 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'UA-165323572-1');
+      gtag('config', 'G-111FRRR9QK');
     </script>
 
     <title>TechSnazzy, LLC - Technology Consultation Services</title>
@@ -86,7 +91,9 @@
                 <a class="nav-link" href="#contact-me">Contact</a>
               </li>
               <li class="nav-item" role="presentation">
-                <a class="nav-link" href="https://techsnazzy.com/sean-blog/">Blog</a>
+                <a class="nav-link" href="https://techsnazzy.com/sean-blog/"
+                  >Blog</a
+                >
               </li>
             </ul>
           </div>
