--- a/index-old.html
+++ b/index-old.html
@@ -327,8 +327,7 @@
         <h2 class="text-center">Contact Me</h2>
         <p class="lead">Send me a message. I'd love to hear from you.</p>
         <div class="form-group">
-          <label for="name">Full Name</label>
-          <input id="name"
+          <input
             class="form-control"
             type="text"
             name="name"
@@ -336,8 +335,7 @@
           />
         </div>
         <div class="form-group">
-          <label for="name">Full Name</label>
-          <input id="name"
+          <input
             class="form-control is-invalid"
             type="email"
             name="email"
@@ -345,8 +343,7 @@
           />
         </div>
         <div class="form-group">
-          <label for="message">Message</label>
-          <textarea id="message"
+          <textarea
             class="form-control"
             rows="14"
             name="message"
