Updated social icons

--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <!-- <script src="https://kit.fontawesome.com/dd5b3e50d1.js" crossorigin="anonymous"></script> -->
-    <script
+    <!-- <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"
       integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
 
     <title>TechSnazzy, LLC - Technology Consultation Services</title>
   </head>
@@ -117,10 +121,13 @@
             best.
           </p>
           <div class="social text-center display-4">
+            <a href="https://bsky.app/profile/seanmorrison.cloud" target="_blank">
+              <i class="fa-brands fa-square-bluesky text-white"></i>
+            </a>
             <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank">
               <i class="fab fa-facebook-square text-white"></i>
-            <!-- </a>
-            <a href="https://www.youtube.com/@TechSnazzyMedia" target="_blank">
+            </a>
+            <!-- <a href="https://www.youtube.com/@TechSnazzyMedia" target="_blank">
               <i class="fab fa-youtube-square text-white"></i>
             </a> -->
             <a href="https://www.instagram.com/TechSnazzyLLC" target="_blank">
@@ -406,7 +413,10 @@
                 stress-free.
               </p>
             </div>
+            </div>
             <div class="col item social text-center">
+              <a href="https://bsky.app/profile/seanmorrison.cloud" target="_blank">
+              <i class="fa-brands fa-square-bluesky"></i></a>
               <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank">
                 <i class="fab fa-facebook-square"></i>
               </a>
