Updated issue in contact form

--- a/index.html
+++ b/index.html
@@ -121,12 +121,18 @@
             best.
           </p>
           <div class="social text-center display-4">
-            <a href="https://bsky.app/profile/seanmorrison.cloud" target="_blank">
+            <a
+              href="https://bsky.app/profile/seanmorrison.cloud"
+              target="_blank"
+            >
               <i class="fa-brands fa-square-bluesky text-white"></i>
             </a>
-            <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank">
-              <i class="fab fa-facebook-square text-white"></i>
+            <a href="https://www.twitter.com/seanmorrison" target="_blank">
+              <i class="fa-brands fa-x-twitter text-white"></i>
             </a>
+            <!-- <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank">
+              <i class="fab fa-facebook-square text-white"></i>
+            </a> -->
             <!-- <a href="https://www.youtube.com/@TechSnazzyMedia" target="_blank">
               <i class="fab fa-youtube-square text-white"></i>
             </a> -->
@@ -333,36 +339,49 @@
       <form action="https://formspree.io/seanwuzhere@gmail.com" method="POST">
         <h2 class="text-center">Contact Me</h2>
         <p class="lead">Send me a message. I'd love to hear from you.</p>
+
+        <!-- Full Name Field -->
         <div class="form-group">
           <label for="name">Full Name</label>
-          <input id="name"
+          <input
+            id="name"
             class="form-control"
             type="text"
             name="name"
             placeholder="Full Name"
+            required
           />
         </div>
+
+        <!-- Email Address Field -->
         <div class="form-group">
-          <label for="name">Full Name</label>
-          <input id="name"
-            class="form-control is-invalid"
+          <label for="email">Email Address</label>
+          <input
+            id="email"
+            class="form-control"
             type="email"
             name="email"
             placeholder="Email Address"
+            required
           />
         </div>
+
+        <!-- Message Field -->
         <div class="form-group">
           <label for="message">Message</label>
-          <textarea id="message"
+          <textarea
+            id="message"
             class="form-control"
             rows="14"
             name="message"
             placeholder="Message inquiry"
-          >
-          </textarea>
+            required
+          ></textarea>
         </div>
+
+        <!-- Submit Button -->
         <div class="form-group">
-          <button class="btn btn-primary" type="submit">send</button>
+          <button class="btn btn-primary" type="submit">Send</button>
         </div>
       </form>
     </div>
@@ -413,22 +432,16 @@
                 stress-free.
               </p>
             </div>
-            </div>
             <div class="col item social text-center">
-              <a href="https://bsky.app/profile/seanmorrison.cloud" target="_blank">
-              <i class="fa-brands fa-square-bluesky"></i></a>
-              <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank">
-                <i class="fab fa-facebook-square"></i>
-              </a>
-              <!-- <a href="https://www.twitter.com/TechSnazzyLLC" target="_blank">
-                <i class="fab fa-twitter-square"></i>
-              </a> -->
-              <!-- <a
-                href="https://www.youtube.com/@TechSnazzyMedia"
+              <a
+                href="https://bsky.app/profile/seanmorrison.cloud"
                 target="_blank"
               >
-                <i class="fab fa-youtube-square"></i>
-              </a> -->
+                <i class="fa-brands fa-square-bluesky"></i>
+              </a>
+              <a href="https://www.twitter.com/seanmorrison" target="_blank">
+                <i class="fa-brands fa-x-twitter"></i>
+              </a>
               <a href="https://www.instagram.com/TechSnazzyLLC" target="_blank">
                 <i class="fab fa-instagram"></i>
               </a>
