--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           <p class="copyright text-center">
             © 2025 <a href="https://techsnazzy.com">TechSnazzy, LLC</a> - site
             development including code and content by
-            <a href="http://www.twitter.com/seanmorrison" target="_blank"
+            <a href="https://bsky.app/profile/seanmorrison.cloud" target="_blank"
               >Sean Morrison</a
             >
           </p>
