Remove all social media links

--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@
             Expert IT support and web development tailored to your needs.
             Whether it’s Windows, Mac, Linux, or crafting stunning front-end
             websites, I simplify technology so you can focus on what you do
-            best.
+            best. TechSnazzy is here to make your technology simple, reliable,
+            and stress-free.
           </p>
+          <!-- Someting
           <div class="social text-center display-4">
             <a
               href="https://bsky.app/profile/seanmorrison.cloud"
@@ -130,12 +132,12 @@
             <a href="https://www.twitter.com/seanmorrison" target="_blank">
               <i class="fa-brands fa-x-twitter text-white"></i>
             </a>
-            <!-- <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank">
+            <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank">
               <i class="fab fa-facebook-square text-white"></i>
             </a> -->
-            <!-- <a href="https://www.youtube.com/@TechSnazzyMedia" target="_blank">
+          <!-- <a href="https://www.youtube.com/@TechSnazzyMedia" target="_blank">
               <i class="fab fa-youtube-square text-white"></i>
-            </a> -->
+            </a>
             <a href="https://www.instagram.com/TechSnazzyLLC" target="_blank">
               <i class="fab fa-instagram text-white"></i>
             </a>
@@ -153,7 +155,7 @@
           <p class="text-center lead">
             TechSnazzy is here to make your technology simple, reliable, and
             stress-free.
-          </p>
+          </p> -->
         </div>
       </div>
     </div>
@@ -432,7 +434,7 @@
                 stress-free.
               </p>
             </div>
-            <div class="col item social text-center">
+            <!-- <div class="col item social text-center">
               <a
                 href="https://bsky.app/profile/seanmorrison.cloud"
                 target="_blank"
@@ -454,12 +456,14 @@
               <a href="https://github.com/TechSnazzy" target="_blank">
                 <i class="fab fa-github-square"></i>
               </a>
-            </div>
+            </div> -->
           </div>
           <p class="copyright text-center">
             © 2025 <a href="https://techsnazzy.com">TechSnazzy, LLC</a> - site
             development including code and content by
-            <a href="https://bsky.app/profile/seanmorrison.cloud" target="_blank"
+            <a
+              href="https://bsky.app/profile/seanmorrison.cloud"
+              target="_blank"
               >Sean Morrison</a
             >
           </p>
